fixing buttons layout bug

--- a/css/cmps/inputs.css
+++ b/css/cmps/inputs.css
@@ -52,8 +52,8 @@ textarea {
     margin-top: 20px;
     margin-bottom: 30px;
     background-color: var(--clr3);
-    width: max-content;
-    justify-content: space-around;
+   max-width: 85%
+    /* justify-content: space-around; */
     /* align-items: center; */
     
 
@@ -61,8 +61,8 @@ textarea {
 
 .white-buttons-container button {
     margin-top: 10px;
-    min-width: 12%;
-    min-height: 50px;
+    min-width: 12%; 
+     min-height: 50px;
     
     /* margin-inline-start: 20px;
     margin-inline-end: 35px; */
@@ -128,6 +128,26 @@ textarea {
         margin-top: 10px;
         min-width: 12%;
         min-height: 50px;
+        /* margin-inline-start: 20px;
+        margin-inline-end: 35px; */
+    }
+}
+
+@media (max-width:500px){
+    .white-buttons-container {
+        /* display: grid; */
+     column-gap: 10px;
+     margin-right: 10px;
+    /* grid-template-columns: repeat(5,30px) ;
+    grid-template-rows: repeat(2, 30px);
+    width: max-content;
+    height: max-content;
+    
+
+    .white-buttons-container button {
+        margin-top: 10px;
+       width:25px;
+        height: 25px;
         /* margin-inline-start: 20px;
         margin-inline-end: 35px; */
     }
